// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/hub/Views/LogIn component Snapshot tests with react-test-renderer login view is rendered correctly 1`] = `
<div
  className="LogInView"
>
  <div
    className="LogInView--addPaddingTop row align-center"
  >
    <div
      className="columns"
    >
      <div
        className="LogInView__header flex-container align-center-middle"
      >
        <img
          className="LogInView__headerImage"
          src="/app/images/hub/account/ghosty-account.svg"
        />
        <div
          className="LogInView__headerTitle text-center"
        >
          <h3>
            hub_login_header_title
          </h3>
        </div>
      </div>
    </div>
  </div>
  <div
    className="LogInView--addPaddingTop row align-center"
  >
    <div
      className="columns small-12 medium-10 large-6"
    >
      <form
        onSubmit={[Function]}
      >
        <label
          className="LogInView__inputLabel"
          htmlFor="login-email"
        >
          email_colon
        </label>
        <input
          autoComplete="off"
          className="LogInView__inputBox"
          id="login-email"
          name="email"
          onChange={[Function]}
          pattern=".{1,}"
          type="text"
          value="test@example.com"
        />
        <label
          className="LogInView__inputLabel"
          htmlFor="login-password"
        >
          password_colon
        </label>
        <input
          className="LogInView__inputBox"
          id="login-password"
          name="password"
          onChange={[Function]}
          pattern=".{1,}"
          type="password"
          value="examplePassword"
        />
        <div
          className="flex-container align-center"
        >
          <span
            className="LogInView__link text-center"
          >
            <a
              aria-current={null}
              href="/forgot-password"
              onClick={[Function]}
            >
              forgot_password
            </a>
          </span>
        </div>
        <div
          className="flex-container align-center"
        >
          <span
            className="LogInView__link text-center"
          >
            hub_login_link_dont_have_account
             
            <a
              aria-current={null}
              href="/create-account"
              onClick={[Function]}
            >
              hub_login_link_create_account
            </a>
          </span>
        </div>
        <div
          className="LogInView--addPaddingTop flex-container align-center"
        >
          <button
            className="LogInView__button button success"
            type="submit"
          >
            sign_in
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`app/hub/Views/LogIn component Snapshot tests with react-test-renderer login view is rendered correctly with empty strings and errors 1`] = `
<div
  className="LogInView"
>
  <div
    className="LogInView--addPaddingTop row align-center"
  >
    <div
      className="columns"
    >
      <div
        className="LogInView__header flex-container align-center-middle"
      >
        <img
          className="LogInView__headerImage"
          src="/app/images/hub/account/ghosty-account.svg"
        />
        <div
          className="LogInView__headerTitle text-center"
        >
          <h3>
            hub_login_header_title
          </h3>
        </div>
      </div>
    </div>
  </div>
  <div
    className="LogInView--addPaddingTop row align-center"
  >
    <div
      className="columns small-12 medium-10 large-6"
    >
      <form
        onSubmit={[Function]}
      >
        <label
          className="LogInView__inputLabel"
          htmlFor="login-email"
        >
          email_colon
        </label>
        <input
          autoComplete="off"
          className="LogInView__inputBox error"
          id="login-email"
          name="email"
          onChange={[Function]}
          pattern=".{1,}"
          type="text"
          value=""
        />
        <div
          className="LogInView__inputError"
        >
          please_enter_a_valid_email
        </div>
        <label
          className="LogInView__inputLabel"
          htmlFor="login-password"
        >
          password_colon
        </label>
        <input
          className="LogInView__inputBox error"
          id="login-password"
          name="password"
          onChange={[Function]}
          pattern=".{1,}"
          type="password"
          value=""
        />
        <div
          className="LogInView__inputError"
        >
          hub_login_label_password_invalid
        </div>
        <div
          className="flex-container align-center"
        >
          <span
            className="LogInView__link text-center"
          >
            <a
              aria-current={null}
              href="/forgot-password"
              onClick={[Function]}
            >
              forgot_password
            </a>
          </span>
        </div>
        <div
          className="flex-container align-center"
        >
          <span
            className="LogInView__link text-center"
          >
            hub_login_link_dont_have_account
             
            <a
              aria-current={null}
              href="/create-account"
              onClick={[Function]}
            >
              hub_login_link_create_account
            </a>
          </span>
        </div>
        <div
          className="LogInView--addPaddingTop flex-container align-center"
        >
          <button
            className="LogInView__button button success"
            type="submit"
          >
            sign_in
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;
